# SQL-DEBUGGER

./: .dockerignore  .gitignore  Dockerfile  README.md  SQL_result.txt  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
server/: __init__.py  app.py  environment.py  tasks.py
